.provarCaches/00D5f000005vwGkEAI/objects/rstkf__ufxacctsum__c.object
<CustomObject>
    <description>ufxacctsum__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctsum_gains__c</fullName>
        <label>Total Gains</label>
        <summarizedField>rstkf__ufxacctcurrsum__c.rstkf__ufxacctcurrsum_gains__c</summarizedField>
        <summaryForeignKey>rstkf__ufxacctcurrsum__c.rstkf__ufxacctcurrsum_ufxacctsum__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctsum_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A pointer to a GL Account record having an Fx Type of Monetary Cash or Monetary Non-Cash.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>UFX Account Summary</relationshipLabel>
        <relationshipName>ufxacctsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctsum_losses__c</fullName>
        <label>Total Losses</label>
        <summarizedField>rstkf__ufxacctcurrsum__c.rstkf__ufxacctcurrsum_losses__c</summarizedField>
        <summaryForeignKey>rstkf__ufxacctcurrsum__c.rstkf__ufxacctcurrsum_ufxacctsum__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctsum_name__c</fullName>
        <formula>rstkf__ufxacctsum_ufxhead__r.rstkf__ufxhead_name__c &amp; &quot; - &quot; &amp; rstkf__ufxacctsum_glacct__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFX Account Summary Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctsum_ufxhead__c</fullName>
        <inlineHelpText>A link to the UFXHEAD record for the run.</inlineHelpText>
        <label>UFX Run</label>
        <referenceTo>rstkf__ufxhead__c</referenceTo>
        <relationshipLabel>UFX Account Summary</relationshipLabel>
        <relationshipName>ufxacctsums</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UFX Account Summary</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UFX Account Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UFX Account Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>